# percolator-prog

./: BOUNTY.md  CLAUDE.md  Cargo.toml  README.md  V13_PORT.md  V13_TEST_PORT_COVERAGE.md  V13_TEST_PORT_MANIFEST.tsv  V14_PORT.md  V14_TEST_PORT_COVERAGE.md  [DRAINED] INSURANCE VAULT  audit.md  bench.md  bugs.md  plan.md  security.md
.cargo/: audit.toml
.github/workflows/: ci.yml  kani-manual.yml
audits/: engine_contracts.json
docs/: dispatch-walkthrough.md  phase20-attack-scenarios.md
docs/audit/: 2026-03-11-kani-proof-quality.md
examples/: dump_layout.rs
scripts/: proof-strength-audit-results.md  security-sweep-log.md  security.md  user-dos-lof-audit.md  wrapper_contract_gate.py
security-research/: session5.md
src/: constants.rs  cpi.rs  errors.rs  guards.rs  lib.rs  matcher_abi.rs  oracle.rs  percolator.rs  policy.rs  processor.rs  risk_buffer.rs  spl.rs  spl_token.rs  state.rs  tags.rs  units.rs  v13_program.rs  v14_program.rs  v16_program.rs  zc.rs
src/instructions/: admin_force_close_account.rs  catchup_accrue.rs  close_account.rs  close_slab.rs  convert_released_pnl.rs  deposit_collateral.rs  deposit_fee_credits.rs  force_close_resolved.rs  init_lp.rs  init_market.rs  init_user.rs  keeper_crank.rs  liquidate_at_oracle.rs  mod.rs  push_hyperp_mark.rs  reclaim_empty_account.rs  resolve_market.rs  resolve_permissionless.rs  settle_account.rs  top_up_insurance.rs  trade_cpi.rs  trade_no_cpi.rs  update_authority.rs  update_config.rs  withdraw_collateral.rs  withdraw_insurance.rs  withdraw_insurance_limited.rs
tests/: cu_benchmark.rs  drift_detection.rs  e2e_simulation.rs  i128_alignment.rs  integration.rs  kani.rs  pinocchio_cpi_parity.rs  test_a1_siphon_regression.rs  test_admin.rs  test_attack_buzz_pattern_def.rs  test_basic.rs  test_conservation.rs  test_economic_attack_vectors.rs  test_envelope_gate.rs  test_f7_insurance_teleport.rs  test_init_market_e2e.rs  test_insurance.rs  test_legacy_disabled.rs  test_oracle.rs  test_patch_verification.rs  test_phase2_dispatch.rs  test_ping.rs  test_push_hyperp_mark.rs  test_resolution.rs  test_risk_buffer.rs  test_security.rs  test_tradecpi.rs  test_unit_v2.rs  test_update_authority.rs  test_validate_matcher_return_partial_fill.rs  unit.rs  v13_cu.rs  v13_kani.rs  v13_wrapper.rs  v14_cu.rs  v14_kani.rs  v14_wrapper.rs  v16_cu.rs  v16_kani.rs  v16_wrapper.rs
tests/common/: legacy.rs  mod.rs
tests/fixtures/auth_matcher/: Cargo.toml
tests/fixtures/auth_matcher/src/: lib.rs
tests/fixtures/hostile_matcher/: Cargo.toml
tests/fixtures/hostile_matcher/src/: lib.rs
